fixed spacing

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -288,158 +288,6 @@ header .text h1:hover{
 
 
 
-@media only screen and (max-width:900px){
-    .main-container{
-        width: 97.7vw;
-    }
-    nav{
-        flex-direction: column;
-    }
-    nav .logo{
-        margin-bottom: .5rem;
-    }
-    nav ul{
-       text-align: center;
-       justify-content: center;
-       align-items: center;
-       display: flex;
-       flex-direction: column;
-       margin-right: 0px;
-    }
-    nav ul li{
-        margin-right: 0px;
-    } 
-    header .text h1{
-       font-size: 2rem;
-    }
-    header .text h3{
-        font-size: .9rem;
-    }
-    nav .logo{
-        font-size: 1.5rem;
-    }
-    nav ul li a{
-        font-size: 1rem;
-    }
-    .upcoming-event-container{
-        height: 73rem;
-        /* border: 1px solid orangered; */
-    }
-    .text-event{
-        font-size: 1.4rem;
-        width: 20rem;
-    }
-    .upcoming-event{
-        /* border: 1px solid red; */
-        width: 100%;
-        height: 100%;
-    }
-    .upcoming-event-image{
-        flex-direction: column;
-        /* border: 1px solid blue; */
-        margin: auto;
-        height: 95%;
-        width: 100%;
-
-    }
-    .upcoming-event-image .images1{
-        display: flex;
-        flex-direction: column;
-        width: 70%;
-        margin:0 auto;
-        /* border:2px solid green; */
-        height: 50% ;
-    }
-    .upcoming-event-image .images2{
-        display: flex;
-        flex-direction: column;
-        width: 70%;
-        margin: auto;
-        height: 50%;
-        /* border: 2px solid green; */
-    }
-    .upcoming-event-image .images1 img{
-        height: 60%;
-    }
-    .upcoming-event-image .images2 img{
-        height: 60%;
-    }
-    .text1 .cta:hover{
-        transform: none;
-        transition: none;
-        cursor: none;
-    }
-    .text1:hover{
-        transform: scale(1.1);
-        color: #c21949;
-        transition: .5s;
-    }
-    .text1 h3{
-        font-size: 1.7rem;
-        font-weight: 600;
-    }
-    .text1 p{
-        font-size: 1rem;
-        font-weight: 600;
-        padding-top: .6rem;
-    }
-    .explore-world{
-        flex-direction: column;
-        /* border:2px solid red; */
-        height: 100%;
-    }
-    .explore-world .explore-world-text{
-         position: relative;
-        top :20px;
-        border: 1px solid green;
-        /* height: 15%; */
-    }
-    .explore-world .images{
-        border: 1px solid orange;
-        /* flex-direction: column; */
-        padding-right: 0rem;
-        margin-top: 2rem;
-        width: 100%;
-        
-    }
-    .explore-world .images .img1{
-        display: none;
-    }
-    .explore-world .images .img2{
-        border: 1px solid red;
-        height: 14.5rem;
-        width: 50%;
-        position: none;
-        top: 0;
-    }
-    .explore-world .images .img3{
-        border: 1px solid red;
-        height: 14.5rem;
-        width: 50%;
-        position: none;
-        top: 0;
-    }
-
-    /* .explore-world .images .img3, .img2{
-        position: none;
-        top:0;
-        width: 50%;
-        margin: 1rem 1rem 1rem .5rem;
-  } 
-    .explore-world .images .img1{
-        display: none;
-    }
-    .explore-world .images .img3{
-        position:none;
-        top: 0;
-        margin: .5rem 1rem 1rem 1rem;
-        width: 50%;
-    } */
-}
-
-
-
-
 
 
 
